--- a/DailyJournal/app/src/main/res/values/strings.xml
+++ b/DailyJournal/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Daily Journal</string>
+    <string name="title_activity_view_friends">ViewFriendsActivity</string>
 </resources>
