--- a/DailyJournal/app/src/main/res/values/strings.xml
+++ b/DailyJournal/app/src/main/res/values/strings.xml
@@ -8,12 +8,30 @@
     <string name="intent_extra_user_id" translatable="false">FRIEND_ID</string>
     <string name="intent_extra_user_name"  translatable="false">FRIEND_NAME</string>
 
+    <string name="database_user_list" translatable="false">users</string>
+    <string name="database_user_list_public_url" translatable="false">https://daily-journal-beaac.firebaseio.com/users.json</string>
     <string name="database_user_posts_url" translatable="false">user-data</string>
+    <string name="database_user_friends_base_url" translatable="false">user-friend-requests</string>
+    <string name="database_user_friends_pending_url" translatable="false">Pending</string>
+    <string name="database_user_friends_accepted_url" translatable="false">Accepted</string>
     <string name="database_user_post_privacy_boolean" translatable="false">mPrivate</string>
 
+    <string name="activity_title_search">Search</string>
+    <string name="search_no_results_found">No results found. Please check your search string.</string>
+
+    <string name="activity_title_pending_requests" translatable="true">Friend Requests</string>
+    <string name="no_pending_requests" translatable="true">No pending requests</string>
     <string name="no_posts_user_self" translatable="true">You have not made any posts this month. Why don\'t you create a new post right now?</string>
     <string name="no_posts_user_friend" translatable="true">Looks like he hasn\'t shared any posts this month.</string>
 
+    <string name="activity_title_my_friends" translatable="true">My Friends</string>
+
+    <string name="activity_title_new_entry" translatable="true">New Entry</string>
+    <string name="new_entry_private">Private</string>
+    <string name="new_entry_public">Public</string>
+    <string name="toast_entry_saved">Entry Saved</string>
+    <string name="layout_save_entry">Save Entry</string>
+    <string name="layout_entry_hint">What did you do today?</string>
 
     <string name="journal_entry_date_format">dd MMM yyyy</string>
 
